--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>hielbasan</title>
-    <link rel="icon" href="file:///C:/Users/Perdorues/Desktop/GitHub/GentYlli.github.io/favicon.ico">
+    <link rel="icon" href="https://gentylli.github.io/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25190ce31d.js" crossorigin="anonymous"></script>
@@ -35,7 +35,7 @@
            </thead>
           </tr>
           <tr>
-            <td>Kafe</td><td class="shuma">80 Lekë</td>
+            <td>Kafe</td><td class="shuma">70 Lekë</td>
           </tr>
           <tr>
             <td>Makiato</td><td class="shuma">70 Lekë</td>
