--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>hielbasan</title>
-    <link rel="icon" href="https://github.com/GentYlli/GentYlli.github.io/blob/main/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25190ce31d.js" crossorigin="anonymous"></script>
