--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <img src="hi.gif" alt=""/>
       </div>
       <div class="menu">
+        <h1>Menu</h1>
           <div class="row1">
             <a href="#Kafeteria"><button id="filter" type="button" name="button">Kafeteria</button></a>
             <a href="#Freskuse"><button id="filter" type="button" name="button">Freskuese</button></a>
