--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <div class="body">
       <div class="head">
-        <img src="hi.png"/>
-        <img src="hi.gif" alt=""/>
+        <a href="https://gentylli.github.io/" <img src="hi.png" alt="hielbasan"/>>
+        <a href="https://gentylli.github.io/" <img src="hi.gif" alt="hielbasan"/>>
       </div>
       <div class="menu">
         <h1>Menu</h1>
